--- a/Start/style/student.css
+++ b/Start/style/student.css
@@ -25,8 +25,9 @@ body {
 	width:20%;
 	height: 100%;
 	padding-top: 48px;
+	margin-left: 10px;
 	float: left;
-	background-color:rgba(255,255,255,0.9);
+	background-color:rgba(255,255,255,0.3);
 	margin-right:15px;
 }
 #right {
@@ -35,7 +36,7 @@ body {
 	height: 100%;
 	overflow: hidden;
 	float: left;
-	background-color:rgba(255,255,255,0.9);
+	background-color:rgba(255,255,255,0.3);
 }
 #top {
 	width: 80%;
