--- a/style/index.css
+++ b/style/index.css
@@ -26,7 +26,7 @@ body,html {
 
 	/* 字体默认颜色，边距，间距 */
 	color: #ffffff;
-	text-shadow: 0.05em 0.05em 0 #868686, -0.05em 0.05em 0 #868686,0 0.05em 0 #868686;
+	text-shadow: 0.05em 0.05em 0 #7e7e7e, -0.05em 0.05em 0 #7e7e7e,0 0.05em 0 #7e7e7e;
 	padding: 1.5vmin 2vmin;
 	letter-spacing: 7px;
 
