--- a/Start/student/style/style.css
+++ b/Start/student/style/style.css
@@ -6,6 +6,7 @@
 }
 body,html {
 	height: 100%;
+	min-width: 1100px;
 }
 body {
 	font-family: 微软雅黑;
@@ -16,7 +17,7 @@ body {
 	background-repeat: repeat-x;
 }
 #box {
-	width: 1050px;
+	width: 1100px;
 	height: 90%;
 	overflow: hidden;
 	background-repeat: no-repeat;
@@ -70,17 +71,17 @@ body {
 	line-height: 40px;
 	color:rgb(0,0,0);
 	font-weight: bold;
-	
 	border-bottom: solid 1px #116493;
 	margin-bottom: 10px;
 }
 #title1 li {
 	list-style-type: none;
-	width: 150px;
+	width: 82px;
 	text-align: center;
 	float: left;
 	font-size: 18px;
 }
+
 #title2 {
 	height: 30px;
 	line-height: 30px;
@@ -96,21 +97,25 @@ body {
 	text-align: center;
 	float: left;
 }
+
+
 .list1 {
 	height: auto;
 	width:1050px;
 	overflow: hidden;
 	border-bottom: dashed 1px #00293C;
-	line-height: 30px;
+	line-height: 35px;
 	clear: both;
 	font-size: 18px;
 }
 .list1 li {
 	list-style-type: none;
-	width: 150px;
+	width: 82px;
 	text-align: center;
 	float: left;
 }
+
+
 .list2 {
 	height: 30px;
 	border-bottom: dashed 1px #00293C;
@@ -122,6 +127,8 @@ body {
 	text-align: center;
 	float: left;
 }
+
+
 #menu{
 	text-align:right;
 	
