--- a/Start/student/style/style.css
+++ b/Start/student/style/style.css
@@ -22,10 +22,14 @@ body {
 	overflow: hidden;
 	background-repeat: no-repeat;
 	padding:20px;
+	display: inline;
 	/*border:2px solid black;*/
 }
 #jishu{
 	text-align:right;
+	position: absolute;
+	top: 10px;
+	right: 10px;
 }
 /*-------------------------*/
 #title_r {
@@ -46,7 +50,7 @@ body {
 }
 .list_r {
 	height: auto;
-	width:1050px;
+	width:1100;
 	overflow: hidden;
 	border-bottom: dashed 1px #00293C;
 	line-height: 30px;
@@ -68,7 +72,7 @@ body {
 }
 #title1 {
 	height: 40px;
-	line-height: 40px;
+	line-height: 50px;
 	color:rgb(0,0,0);
 	font-weight: bold;
 	border-bottom: solid 1px #116493;
@@ -97,11 +101,26 @@ body {
 	text-align: center;
 	float: left;
 }
-
+#title3 {
+	height: 40px;
+	line-height: 50px;
+	color:rgb(0,0,0);
+	font-weight: bold;
+	border-bottom: solid 1px #116493;
+	margin-top: 25px;
+	margin-bottom: 10px;
+}
+#title3 li {
+	list-style-type: none;
+	width: 82px;
+	text-align: center;
+	float: left;
+	font-size: 18px;
+}
 
 .list1 {
 	height: auto;
-	width:1050px;
+	width:1100px;
 	overflow: hidden;
 	border-bottom: dashed 1px #00293C;
 	line-height: 35px;
@@ -135,6 +154,9 @@ body {
 }
 #top1{
 	padding:20px;
+	position: absolute;
+	top: 10px;
+	left: 10px;
 }
 a{
 	text-decoration:none;
