--- a/Start/style/student.css
+++ b/Start/style/student.css
@@ -20,8 +20,11 @@ body {
 	height: 100%;
 	overflow: hidden;
 	background-repeat: no-repeat;
+	display: flex;
+	flex-direction: row;
 }
 #left {
+	min-width: 170px;
 	width:15%;
 	height: 90%;
 	margin-left: 10px;
@@ -30,6 +33,7 @@ body {
 	margin-right:15px;
 }
 #right {
+	min-width: 50%;
 	width:79%;
 	padding-right:3%;
 	height: 90%;
@@ -51,7 +55,7 @@ body {
 }
 iframe{
 	width:100%;
-	height:100%;
+	height:94%;
 }
 .anniu{
 	background-color:green;
