--- a/Start/student/style/style.css
+++ b/Start/student/style/style.css
@@ -23,7 +23,6 @@ body {
 	background-repeat: no-repeat;
 	padding:20px;
 	display: inline;
-	/*border:2px solid black;*/
 }
 #jishu{
 	text-align:right;
@@ -31,6 +30,42 @@ body {
 	top: 10px;
 	right: 10px;
 }
+.xxi {
+	position: absolute; /* 设置绝对定位 */
+	color: rgb(0, 0, 0);
+	padding: 30px;
+}
+.xxi td{
+	height: 40px;
+}
+.xgk{
+    width: 200px;
+    height: 30px;
+    text-indent: 10px;
+	font-size: 16px;    
+    border: 1.5px solid #f1e8e8; 
+	background-color: rgb(163, 181, 187,0.5);
+    outline: none;
+	border-radius: 5px 5px 5px 5px; 
+	text-shadow: 1px 1px 1px rgba(255, 255, 255); /* 添加2像素水平偏移、2像素垂直偏移和4像素模糊半径的黑色（透明度0.5）阴影效果 */
+}
+form select {
+	border-radius: 5px 5px 5px 5px; 
+    text-indent: 10px;
+    width: 202px;                 /* 宽度 */
+    height: 32px;                 /* 高度 */
+    background-color: rgba(163, 181, 187, 0.5);  /* 元素背景颜色，设置透明度为0.5 */
+    border: 1.5px solid #f1e8e8;    /* 边框线 */
+    text-shadow: 1px 1px 1px rgba(255, 255, 255);
+    outline: none;                 /* 去掉黑框 */
+    font-size: 16px;              /* 字体大小 */
+}
+
+form option {
+    width: 160px;
+    height: 30px;
+}
+
 /*-------------------------*/
 #title_r {
 	height: 40px;
@@ -47,6 +82,20 @@ body {
 	text-align: center;
 	float: left;
 	font-size: 18px;
+}
+.submit{
+	margin-top: 20px;
+    width: 200px ;
+    height: 35px ;
+	color:#FFF;
+	font-size: 18px;
+    background-color: #24a5f1;
+	border: none;
+	letter-spacing: 4px;
+	border-radius: 10px 10px 10px 10px;
+}
+.submit:hover{
+    background: #0297ef;
 }
 .list_r {
 	height: auto;
