--- a/Start/student/style/style.css
+++ b/Start/student/style/style.css
@@ -16,6 +16,16 @@ body {
 	
 	background-repeat: repeat-x;
 }
+.header{
+	line-height: 40px;
+	width: 200px;
+	height: 100px;
+	font-size: 25px;
+	text-align: center;
+	letter-spacing: 7px;
+	text-shadow:0.05em 0.05em 0 #fffefe, -0.05em 0.05em 0 #7e7e7e,0 0.05em 0 #7e7e7e;
+
+}
 #box {
 	width: 1100px;
 	height: 90%;
@@ -121,18 +131,23 @@ form option {
 }
 #title1 {
 	height: 40px;
-	line-height: 50px;
-	color:rgb(0,0,0);
+	line-height: 40px; 
+	color: rgb(0, 0, 0);
 	font-weight: bold;
-	border-bottom: solid 1px #116493;
-	margin-bottom: 10px;
 }
+
 #title1 li {
 	list-style-type: none;
-	width: 82px;
+	width: 90px;
 	text-align: center;
 	float: left;
 	font-size: 18px;
+}
+
+#spacer {
+	width: 1080px;
+	border-bottom: 2px solid #000;
+	margin-bottom: 10px;
 }
 
 #title2 {
@@ -152,16 +167,17 @@ form option {
 }
 #title3 {
 	height: 40px;
-	line-height: 50px;
+	width:1080px;
+	line-height: 38px;
 	color:rgb(0,0,0);
 	font-weight: bold;
-	border-bottom: solid 1px #116493;
+	border-bottom: solid 2px #116493;
 	margin-top: 25px;
 	margin-bottom: 10px;
 }
 #title3 li {
 	list-style-type: none;
-	width: 82px;
+	width: 90px;
 	text-align: center;
 	float: left;
 	font-size: 18px;
@@ -169,22 +185,23 @@ form option {
 
 .list1 {
 	height: auto;
-	width:1100px;
+	width:1080px;
 	overflow: hidden;
-	border-bottom: dashed 1px #00293C;
-	line-height: 35px;
+	border-bottom: dashed 2px #00293C;
+	line-height: 40px;
 	clear: both;
 	font-size: 18px;
 }
 .list1 li {
 	list-style-type: none;
-	width: 82px;
+	width: 90px;
 	text-align: center;
 	float: left;
 }
 
 
 .list2 {
+	width:1080px;
 	height: 30px;
 	border-bottom: dashed 1px #00293C;
 	line-height: 30px;
@@ -197,9 +214,23 @@ form option {
 }
 
 
-#menu{
-	text-align:right;
+#xzys{
+	background: radial-gradient(at 0% 0%,rgba(255, 183, 0, 0.5) 1%, rgba(255, 215, 115, 0.5) 100%); /* 背景颜色为径向渐变，从橙色到浅黄色 */
+	text-shadow: 2px 1px 2px rgba(102, 102, 102, 1); /* 文字阴影效果，颜色为浅灰色 */
+	border-radius: 30px 30px 30px 30px; /* 边框圆角，顶部左右圆角为0，底部左右圆角为30px */
+	width:300px; /* 宽度为150像素 */
+	text-align:center; /* 文字居中对齐 */
+	height:50px; /* 高度为50像素 */
+	margin-top: 20px;
+	line-height:50px; /* 行高为50像素 */
+	margin-left:auto; /* 左外边距自动 */
+	margin-right:auto; /* 右外边距自动 */
+	opacity: 0.85; /* 不透明度为0.85 */
+	color: #ffffff;
 	
+}
+#xzys a{
+	width:70px;
 }
 #top1{
 	padding:20px;
@@ -209,4 +240,15 @@ form option {
 }
 a{
 	text-decoration:none;
+}
+#sel{
+	width: 150px;
+    height: 30px;
+    text-indent: 10px;
+	font-size: 18px;    
+    border: 1px solid #f1e8e8; 
+	background-color: rgb(163, 181, 187,0.5);
+    outline: none;
+	border-radius: 5px 5px 5px 5px; 
+	text-shadow: 1px 1px 1px rgba(255, 255, 255); 
 }
