--- a/style/index.css
+++ b/style/index.css
@@ -1,38 +1,59 @@
 @charset "utf-8";
 /* CSS Document */
+/* 表示将所有元素的外边距和内边距设为0 */
 * {
 	margin: 0px;
 	padding: 0px;
 }
+
 body,html {
-	height:100%;
-	background-image:url(../img/login-bg.jpg);
-	background-repeat:no-repeat;
-	background-size:cover;
-	font-size:18px;
-	color:white;
+	height:100%; /* 它将页面的高度设置为100% */
+	background-image:url(../img/login-bg.jpg); /*设置背景图片*/
+	background-repeat:no-repeat;/*背景重复设置为不重复*/
+	background-size:cover;/*背景大小设置为覆盖整个元素*/
+	font-size:18px;/*字体大小18px*/
+	color:white;/*文本颜色设为白色*/
 }
-#head{
-	height:8%;
-}
-#kuang{
-	background-color:rgba(255,255,255,0.9);
+#bg{
+	background-color:rgba(255,255,255,0.5);/*元素的背景颜色设置为具有90%不透明度的白色*/
 }
 #top{
-	text-align:center;
+	text-align:center;/*元素的文本内容居中对齐*/
 }
-#times{
-	float:left;
+.tit{
+	margin-bottom: 10px; /* 下边框的边距为10像素 */
+	font-size:26px;/*元素的字体大小设置为26px*/
+
+	/* 字体默认颜色，边距，间距 */
+	color: #ffffff;
+	text-shadow: 0.05em 0.05em 0 #7e7e7e, -0.05em 0.05em 0 #7e7e7e,0 0.05em 0 #7e7e7e;
+	padding: 1.5vmin 2vmin;
+	letter-spacing: 7px;
+
+	/* 渐变色背景，居中，背景小一点露出行间距，不重复显示 */
+	background: linear-gradient(30deg,rgba(44, 216, 213, 0.7), rgba(197, 193, 255, 0.7), rgba(255, 186, 195, 0.7)) center;
+	background-size: auto auto;
+	background-repeat: no-repeat;
+	  /* 过渡动画时间 */
+	transition: all 0.5s;
+}
+.tit:hover {
+	/* 鼠标放上来，改变背景大小、位置 */
+	background-size: 100% 0%;
+	background-position-y: 90%;
+	/* 改变文字颜色，文字添加简单描边 */
+	color: #2c2c2c;
+	text-shadow: 0.05em 0.05em 0 #fcfcfc, -0.05em 0.05em 0 #fcfcfc,
+	0 0.05em 0 #fcfcfc;
 }
 
-#zhong{
-	font-size:26px;
-}
+
+
 #tuichu{
-	float:right;
-	font-size:16px;
+	float:right;/*元素向右浮动*/
+	font-size:16px;/*大小设置为16px*/
 }
 a{
-	text-decoration:none;
-	color:white;
+	text-decoration:none;/*将所有链接元素的文本装饰设为无*/
+	color:white;/*文本颜色设为白色*/
 }
