--- a/style/style.css
+++ b/style/style.css
@@ -215,3 +215,15 @@ ul li{
 	padding-top:30px;
 	color:white;
 }
+#gonggao{
+    position: fixed;
+    top: 60px;
+    left: 50px;
+    height: 70%;
+    width: 30%;
+    text-align: left;
+    color:rgb(224, 14, 14);
+    line-height: 40px;
+    font-size:25px;
+    text-shadow: 0 5px 20px rgb(30, 255, 0);
+}
