--- a/Start/2/style/style.css
+++ b/Start/2/style/style.css
@@ -6,7 +6,7 @@
 }
 body,html {
 	height: 100%;
-	min-width: 1100px;
+	min-width: 1440px;
 }
 body {
 	font-family: 微软雅黑;
@@ -27,7 +27,7 @@ body {
 
 }
 #box {
-	width: 1100px;
+	width: 1440px;
 	height: 90%;
 	overflow: hidden;
 	background-repeat: no-repeat;
@@ -49,7 +49,7 @@ body {
 	height: 40px;
 }
 .xgk{
-    width: 200px;
+    width: 150px;
     height: 30px;
     text-indent: 10px;
 	font-size: 16px;    
@@ -59,6 +59,10 @@ body {
 	border-radius: 5px 5px 5px 5px; 
 	text-shadow: 1px 1px 1px rgba(255, 255, 255); /* 添加2像素水平偏移、2像素垂直偏移和4像素模糊半径的黑色（透明度0.5）阴影效果 */
 }
+.xgk:hover {
+    background-color: rgba(150, 150, 150, 0.5); /* 更深的背景色 */
+}
+
 
 
 /*-------------------------*/
@@ -73,7 +77,7 @@ body {
 }
 #title_r li {
 	list-style-type: none;
-	width: 150px;
+	width: 120px;
 	text-align: center;
 	float: left;
 	font-size: 18px;
@@ -96,7 +100,7 @@ body {
 }
 .list_r {
 	height: auto;
-	width:1100;
+	width:1440;
 	overflow: hidden;
 	border-bottom: dashed 1px #00293C;
 	line-height: 30px;
@@ -105,7 +109,7 @@ body {
 }
 .list_r li {
 	list-style-type: none;
-	width: 150px;
+	width: 120px;
 	text-align: center;
 	float: left;
 }
@@ -125,14 +129,14 @@ body {
 
 #title1 li {
 	list-style-type: none;
-	width: 90px;
+	width: 120px;
 	text-align: center;
 	float: left;
 	font-size: 18px;
 }
 
 #spacer {
-	width: 1080px;
+	width: 1800px;
 	border-bottom: 2px solid #000;
 	margin-bottom: 10px;
 }
@@ -154,7 +158,7 @@ body {
 }
 #title3 {
 	height: 40px;
-	width:1080px;
+	width:1800px;
 	line-height: 38px;
 	color:rgb(0,0,0);
 	font-weight: bold;
@@ -164,7 +168,7 @@ body {
 }
 #title3 li {
 	list-style-type: none;
-	width: 90px;
+	width: 120px;
 	text-align: center;
 	float: left;
 	font-size: 18px;
@@ -172,7 +176,7 @@ body {
 
 .list1 {
 	height: auto;
-	width:1080px;
+	width:1800px;
 	overflow: hidden;
 	border-bottom: dashed 1px #00293C;
 	line-height: 40px;
@@ -181,14 +185,14 @@ body {
 }
 .list1 li {
 	list-style-type: none;
-	width: 90px;
+	width: 120px;
 	text-align: center;
 	float: left;
 }
 
 
 .list2 {
-	width:1080px;
+	width:1800px;
 	height: 30px;
 	border-bottom: dashed 1px #00293C;
 	line-height: 30px;
@@ -287,7 +291,7 @@ select option:hover {
 input {
     width: 150px;
     height: 30px ;
-    text-indent: 10px;
+
     font-size: 18px;
     border: 1px solid #f1e8e8; 
     background-color: rgba(200, 200, 200, 0.5);
@@ -295,10 +299,14 @@ input {
     border-radius: 5px;
     text-shadow: 1px 1px 1px rgba(255, 255, 255); 
 }
+input:hover {
+    background-color: rgba(150, 150, 150, 0.5); /* 更深的背景色 */
+}
+
 
 /* 样式化按钮 */
 .btn-submit {
-    width: 150px;
+    width: 100px;
     height: 30px;
     font-size: 18px;
     border: 1px solid #f1e8e8;
@@ -325,4 +333,16 @@ input {
 }
 #user, #psw {
     width: 150px !important ;
+}
+
+#kc{
+	width: 100px !important ;
+}
+
+p {
+	display: flex;
+	/* 元素水平排列 */
+	flex-direction: row;
+	/* 元素在主轴上的对齐方式，这里选择居中对齐，你也可以根据需求修改为 flex-start 或 flex-end 等 */
+	gap: 10px;
 }
